// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Downloadable Block Icon icon rendering should render a <BlockIcon /> component 1`] = `
<div>
  <span
    class="block-editor-block-icon block-directory-downloadable-block-icon has-colors"
  >
    <span
      class="dashicon dashicons dashicons-default"
    />
  </span>
</div>
`;

exports[`Downloadable Block Icon icon rendering should render an <img> tag 1`] = `
<div>
  <img
    alt=""
    class="block-directory-downloadable-block-icon"
    src="https://ps.w.org/listicles/assets/icon-128x128.png"
  />
</div>
`;

exports[`Downloadable Block Icon icon rendering should render an <img> tag if icon URL has query string 1`] = `
<div>
  <img
    alt=""
    class="block-directory-downloadable-block-icon"
    src="https://ps.w.org/listicles/assets/icon-128x128.png?rev=2011672&test=234234"
  />
</div>
`;
